Fix contrast

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -100,7 +100,7 @@ input[type="reset"].no-style {
 
 article.primary {
   color: var(--primary-color-text);
-  background-color: var(--primary-color);
+  background-color: var(--primary-700);
 }
 
 :root {
