--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -1,5 +1,5 @@
 .nav {
-  background: var(--primary-color);
+  background: var(--primary-700);
   color: var(--primary-color-text);
 }
 
@@ -20,7 +20,7 @@
   overflow-y: scroll;
   max-height: 0;
   transition: max-height 0.5s ease-out;
-  background: var(--primary-color);
+  background: var(--primary-700);
 }
 
 .menu ul > li {
@@ -105,7 +105,7 @@
     cursor: default;
   }
 
-  .menu > ul {
+  .menu ul {
     margin-left: 4rem;
   }
 
@@ -147,7 +147,7 @@
     display: flex;
     position: fixed;
     padding: 20px 10px;
-    background: var(--primary-color);
+    background: var(--primary-700);
   }
 
   .subnav-content > ul {
